# TestForSHIFT

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  models.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
